# handler/feedback.go
@@ -19,6 +19,16 @@ func NewFeedbackHandler(feedbackService feedback.Service) *feedbackHandler {
 	return &feedbackHandler{feedbackService}
 }
 
+// @Summary Hapus feedback berdasarkan ID
+// @Description Hapus feedback berdasarkan ID yang diberikan
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param id path int true "ID Feedback"
+// @Success 200 {object} map[string]interface{}
+// @Failure 400 {object} map[string]interface{}
+// @Failure 422 {object} map[string]interface{}
+// @Router /feedback/{id} [delete]
 func (h *feedbackHandler) DeleteFeedback(c *gin.Context) {
 	var input feedback.FeedbackID
 
@@ -44,6 +54,15 @@ func (h *feedbackHandler) DeleteFeedback(c *gin.Context) {
 	c.JSON(http.StatusOK, response)
 }
 
+// @Summary Dapatkan feedback berdasarkan ID
+// @Description Dapatkan feedback berdasarkan ID yang diberikan
+// @Accept json
+// @Produce json
+// @Param id path int true "ID Feedback"
+// @Success 200 {object} map[string]interface{}
+// @Failure 400 {object} map[string]interface{}
+// @Failure 422 {object} map[string]interface{}
+// @Router /feedback/{id} [get]
 func (h *feedbackHandler) GetFeedbackByID(c *gin.Context) {
 	var input feedback.FeedbackID
 
@@ -70,6 +89,15 @@ func (h *feedbackHandler) GetFeedbackByID(c *gin.Context) {
 
 }
 
+// @Summary Dapatkan semua feedback atau feedback berdasarkan ID tertentu
+// @Description Dapatkan semua feedback atau feedback berdasarkan ID tertentu
+// @Accept json
+// @Produce json
+// @Param id query int false "ID Feedback"
+// @Success 200 {object} map[string]interface{}
+// @Failure 400 {object} map[string]interface{}
+// @Failure 422 {object} map[string]interface{}
+// @Router /feedback [get]
 func (h *feedbackHandler) GetAllFeedback(c *gin.Context) {
 	input, _ := strconv.Atoi(c.Query("id"))
 
@@ -85,51 +113,15 @@ func (h *feedbackHandler) GetAllFeedback(c *gin.Context) {
 	c.JSON(http.StatusOK, response)
 }
 
-func (h *feedbackHandler) UpdateFeedback(c *gin.Context) {
-	var input feedback.FeedbackInput
-
-	var inputID feedback.FeedbackID
-
-	err := c.ShouldBindUri(&inputID)
-	if err != nil {
-		errors := helper.FormatValidationError(err)
-		errorMessage := gin.H{"errors": errors}
-		response := helper.APIresponse(http.StatusUnprocessableEntity, errorMessage)
-		c.JSON(http.StatusUnprocessableEntity, response)
-		return
-	}
-
-	err = c.ShouldBind(&input)
-	if err != nil {
-		errorMessages := helper.FormatValidationError(err)
-		errorMessage := gin.H{"errors": errorMessages}
-		response := helper.APIresponse(http.StatusUnprocessableEntity, errorMessage)
-		c.JSON(http.StatusUnprocessableEntity, response)
-		return
-	}
-
-	if err != nil {
-		//inisiasi data yang tujuan dalam return hasil ke postman
-		data := gin.H{"is_uploaded": false}
-		response := helper.APIresponse(http.StatusUnprocessableEntity, data)
-		c.JSON(http.StatusUnprocessableEntity, response)
-		return
-	}
-
-	// _, err = h.feedbackService.UpdateFeedback(inputID, input)
-	// if err != nil {
-	// 	data := gin.H{"is_uploaded": false}
-	// 	response := helper.APIresponse(http.StatusUnprocessableEntity, data)
-	// 	c.JSON(http.StatusUnprocessableEntity, response)
-	// 	return
-	// }
-
-	// data := gin.H{"is_uploaded": true}
-	// response := helper.APIresponse(http.StatusOK, data)
-	// c.JSON(http.StatusOK, response)
-
-}
-
+// @Summary Buat feedback baru
+// @Description Buat feedback baru dengan informasi yang diberikan
+// @Accept json
+// @Produce json
+// @Param input body feedback.FeedbackInput true "Data Feedback yang ingin dibuat"
+// @Success 200 {object} map[string]interface{}
+// @Failure 400 {object} map[string]interface{}
+// @Failure 422 {object} map[string]interface{}
+// @Router /feedback [post]
 func (h *feedbackHandler) PostFeedbackHandler(c *gin.Context) {
 	var feedbackInput feedback.FeedbackInput
 
